fix overlapping blobs

--- a/src/employees/employees.module.css
+++ b/src/employees/employees.module.css
@@ -43,8 +43,8 @@
 
 .employee {
   /* Add margin based on a random offset to make it look more random. */
-  margin: calc(-4rem + 1rem * var(--randomOffset))
-    calc(1rem - 1rem * var(--randomOffset));
+  margin-top: calc(-4rem + 1rem * var(--randomOffset));
+  margin-bottom: calc(1rem - 1rem * var(--randomOffset));
   display: flex;
   flex-direction: column;
   align-items: center;
